--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "type": "module",
   "devDependencies": {
+    "@types/prompt-sync": "^4.2.3",
     "typescript": "^5.4.3"
   },
   "dependencies": {
-    "inquirer": "^9.2.16"
+    "inquirer": "^9.2.16",
+    "prompt-sync": "^4.2.0"
   }
 }
